<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LandingPage2">

    <ImageView
        android:id="@+id/ivLandingPage3"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:src="@drawable/landing_page3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <TextView
        android:id="@+id/tvLandingPage3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/judul_landing_page3"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/ivLandingPage3"
        app:layout_constraintRight_toRightOf="@id/ivLandingPage3"
        app:layout_constraintTop_toBottomOf="@id/ivLandingPage3" />

    <EditText
        android:id="@+id/etLandingPage3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_landing_page3"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLandingPage3" />

    <Button
        android:id="@+id/btnSetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_setname"
        app:layout_constraintTop_toBottomOf="@id/etLandingPage3"
        app:layout_constraintLeft_toLeftOf="@id/etLandingPage3"
        app:layout_constraintRight_toRightOf="@id/etLandingPage3"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>